# internet-ugm

./: CMakeLists.txt  README.md  connect_internet.cpp  internet-ugm.py
scripts/: build.sh
